#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-19
2013-03-25 Andy Salnikov
- fix camera frame image reading

Tag: V00-01-18
2013-03-25 Andy Salnikov
- fixing image joining in PNCCD::FullFrame

Tag: V00-01-17
2013-03-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-21

Tag: V00-01-16
2013-03-25 Andy Salnikov
- fixing princeton schema

Tag: V00-01-15
2013-03-25 Andy Salnikov
- fix Timepix schema for config types

Tag: V00-01-14
2013-03-24 Andy Salnikov
- use new psddlc feature to remap enum constant names ito names used 
  by HDF5 translator

Tag: V00-01-13
2013-03-23 Andy Salnikov
- fix ControlData schema

Tag: V00-01-12
2013-03-23 Andy Salnikov
- fix FCCD schema

Tag: V00-01-11
2013-03-22 Andy Salnikov
- fix Fli schema

Tag: V00-01-10
2013-03-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-17
- use new enum-base feature to avoid specification of attribute type

Tag: V00-01-09
2013-03-22 Andy Salnikov
- forgot to add data/gsc16ai-h5.ddl.xml to last tag

Tag: V00-01-08
2013-03-22 Andy Salnikov
- fix schema for Gsc16ia, apparently HDF5 does not like conversion from 
  enum types in file to integer types in memory

Tag: V00-01-07
2013-03-22 Andy Salnikov
- fix schema for OceanOptics.DataV1

Tag: V00-01-06
2013-03-22 Andy Salnikov
- for UsdUsb::DavaV1 schema version 1 use generated code

Tag: V00-01-05
2013-03-22 Andy Salnikov
- introduce new schema version for UsdUsb::DavaV1, this version has signed
  encoder_count field.

Tag: V00-01-04
2013-03-21 Andy Salnikov
- fix attribute name in usdusb schema

Tag: V00-01-03
2013-03-21 Andy Salnikov
- fix for string EPICS PV type
- fix for BLD GMD schema